--- a/README
+++ b/README
@@ -6,10 +6,18 @@ MIT-License
 
 = Dependencies
 
-as3crypto(patched)
-as3corelib
-as3saxparser
-as3saslclient
+as3crypto(patched) [http://code.google.com/p/as3crypto/]
+as3corelib         [http://code.google.com/p/as3corelib/]
+as3saxparser       [http://github.com/lyokato/as3saxparser/]
+as3saslclient      [http://github.com/lyokato/as3saslclient/]
+
+= as3crypto
+
+as3crypto 1.3 has some bugs.
+At r28(latest version of original svn-repository),
+many of them are fixed, but there are another bugs around a new ASN1 parser.
+so I copied some features from r28 to 1.3
+version, and fixed them to be built without error.
 
 = TODO
 
@@ -31,17 +39,15 @@ XEP-0166: Jingle
 
 X-GOOGLE-TOKEN
 X-FACEBOOK-PLATFORM
-EXTERNAL
-DIGEST-MD5
 
 == PRESET CONFIG
 
 === Google Talk
 
-account: myname@gmail.com
+account:  myname@gmail.com
 password: mypassword
-host: talk.google.com
-port: 5223
+host:     talk.google.com
+port:     5223
 
 === Facebook Chat
 
@@ -49,5 +55,4 @@ account:  myname@chat.facebook.com
 password: mypassword
 host:     chat.facebook.com
 port:     5222
-
 
