--- a/README
+++ b/README
@@ -29,6 +29,7 @@ disconnect on IOError/SecurityError?
 
 XEP-0012: Last Activity
 XEP-0091: Legacy Delayed Delivery
+XEP-0203: Delayed Delivery
 XEP-0092: Software Version
 XEP-0115: Entity Capabilities
 XEP-0085: Chat State Notifications
